kubernetes/apps/media/immich/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-web
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "immich.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: flux-receiver-tls
